# hh_auto_response

./: .gitignore  README.md  pyproject.toml
src/telegram-gateway/: main.py  pyproject.toml
src/telegram-gateway/app/: config.py  di.py
src/telegram-gateway/app/adapters/: handlers.py  middleware.py  telegram.py
src/telegram-gateway/app/application/: use_cases.py
src/telegram-gateway/app/application/interfaces/: __init__.py  formatters.py  services.py  ui_service.py
src/telegram-gateway/app/application/services/: ui_service.py
src/telegram-gateway/app/domain/: models.py
src/telegram-gateway/app/domain/services/: message_formatting_service.py  pagination_service.py
src/telegram-gateway/app/infrastructure/database/: base.py
src/user-service/: pyproject.toml
src/user-service/alembic/: env.py
src/user-service/alembic/versions/: b3927f7fa288_add_base_users_model.py
src/user-service/app/: config.py  di.py
src/user-service/app/domain/: exceptions.py  interfaces.py  models.py
src/user-service/app/domain/services/: user_service.py
src/user-service/app/infrastructure/database/: base.py
src/user-service/app/infrastructure/database/models/: __init__.py  user_model.py
src/user-service/app/infrastructure/repositories/: user_repository.py
src/vacancy-service/: main.py  pyproject.toml
src/vacancy-service/app/infrastructure/http/: base.py  client.py  interfaces.py
