[project]
name = "hh_auto_response"
version = "0.1.0"
description = "Telegram bot using aiogram framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.4.5",
    "aiogram>=3.0.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
]
